# pyk4a

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  numpy-versions.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml  ci.yml  publish.yml
example/: bench.py  benchmark.py  color_formats.py  compare_mjpg_bgra32_nbytes.py  devices.py  helpers.py  imu.py  kinect_pose_display_2d.py  kinect_pose_display_3d.py  playback.py  pose_display_2d.py  pose_display_3d.py  record.py  test_color_control_args.py  threads.py  viewer.py  viewer_depth.py  viewer_point_cloud.py  viewer_transformation.py
pyk4a/: __init__.py  calibration.py  capture.py  config.py  error.py  errors.py  loader.py  module.py  playback.py  py.typed  pyk4a.cpp  pyk4a.py  pyk4abt.cpp  record.py  result.py  results.py  transformation.py  win32_utils.py
tests/: conftest.py
tests/assets/: .placeholder  calibration.json  recording.mkv
tests/functional/: conftest.py  test_calibration.py  test_capture.py  test_device.py  test_playback.py  test_record.py  test_rerecord.py
tests/plugins/: calibration.py  capture.py  device.py  playback.py
tests/unit/: conftest.py  test_calibration.py  test_device.py  test_playback.py  test_record.py
