[tool.poetry]
name = "poetry-demo"
version = "0.3"
description = "Simple Pythonic Wrapper for the Azure-Kinect-Sensor-SDK"
authors = ["etiennedub", "lpasselin"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/etiennedub/pyk4a"
repository = "https://github.com/etiennedub/pyk4a"
documentation = "https://github.com/etiennedub/pyk4a"
keywords = ["k4a","kinect", "azure", "kinect azure", "azure kinect"]

include = []

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.17"

[tool.poetry.extras]


[build-system]
requires = []
build-backend = ""
