[metadata]
description-file = README.md

[flake8]
max-line-length = 120
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[isort]
line_length=120
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
lines_after_imports=2
known_first_party=pyk4a,k4a_module,helpers

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-cv2.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pyqtgraph.*]
ignore_missing_imports = True

[mypy-mpl_toolkits]
ignore_missing_imports = True

[mypy-k4a_module]
ignore_missing_imports = True